Corrected spacing issue with footer when content extends below screen

--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ section > p:not(:first-child) {
     display: flex;
     flex-direction: column;
     margin-top: 1em;
+    margin-bottom: 0.5em;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 1.5em 5em 1.5em 5em;
 }
 
